--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 bubblewrap (0.1.0-2) UNRELEASED; urgency=medium
 
   * Run basic and dev autopkgtests in addition to userns
+  * Really add the regression test for keeping CAP_NET_ADMIN
 
  -- Simon McVittie <smcv@debian.org>  Tue, 07 Jun 2016 07:45:19 +0100
 
