--- a/debian/changelog
+++ b/debian/changelog
@@ -5,7 +5,7 @@ bubblewrap (0.1.0-1) UNRELEASED; urgency=medium
   * debian/copyright: correct package name and source
   * debian/control: make the whole package Linux-only. Like Flatpak, this
     package is inherently non-portable.
-  * Move from Section: web to Section: admin
+  * Move from Section: web to Section: admin (Closes: #824969)
   * Increase Priority to optional, because this tool is likely to be
     depended on by gnome-software (via Flatpak) in future
   * debian/gbp.conf: add DEP-14-style git-buildpackage configuration
