--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bubblewrap (0.1.0-2) UNRELEASED; urgency=medium
+
+  * Run basic and dev autopkgtests in addition to userns
+
+ -- Simon McVittie <smcv@debian.org>  Tue, 07 Jun 2016 07:45:19 +0100
+
 bubblewrap (0.1.0-1) unstable; urgency=low
 
   * New upstream release (closes: #826358).
