--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ bubblewrap (0.1.0-2) UNRELEASED; urgency=medium
   * debian/gbp.conf: add DEP-14-style git-buildpackage configuration
   * Normalize package lists via `wrap-and-sort -abst`
   * Add Vcs-Git, Vcs-Browser metadata
+  * d/p/build-put-libraries-in-LDADD-not-LDFLAGS.patch: new patch
+    fixing linking with -Wl,--as-needed (closes: #826787)
 
  -- Simon McVittie <smcv@debian.org>  Tue, 07 Jun 2016 07:45:19 +0100
 
