--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bubblewrap (0.1.0-3) UNRELEASED; urgency=medium
+
+  * d/control: bubblewrap is Multi-Arch: foreign
+
+ -- Simon McVittie <smcv@debian.org>  Wed, 06 Jul 2016 11:01:29 +0100
+
 bubblewrap (0.1.0-2) unstable; urgency=medium
 
   * Run basic and dev autopkgtests in addition to userns
