New upstream release
  - drop patch, included upstream

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+bubblewrap (0.1.1-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+    - drop patch, included upstream
+
+ -- Simon McVittie <smcv@debian.org>  Thu, 07 Jul 2016 22:18:20 +0100
+
 bubblewrap (0.1.0-3) unstable; urgency=medium
 
   * d/control: bubblewrap is Multi-Arch: foreign
