--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bubblewrap (0.1.2-1) unstable; urgency=medium
+
+  * New upstream release
+
+ -- Simon McVittie <smcv@debian.org>  Fri, 09 Sep 2016 09:22:57 +0100
+
 bubblewrap (0.1.1-1) unstable; urgency=medium
 
   * New upstream release
