--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-bubblewrap (0.1.3-1) UNRELEASED; urgency=medium
+bubblewrap (0.1.3-1) unstable; urgency=medium
 
   * New upstream release
     - bring back --set-hostname, the upstream fix for CVE-2016-8659
       makes it no longer a vulnerability
 
- -- Simon McVittie <smcv@debian.org>  Sat, 15 Oct 2016 07:47:34 +0100
+ -- Simon McVittie <smcv@debian.org>  Sun, 16 Oct 2016 14:32:11 +0100
 
 bubblewrap (0.1.2-2) unstable; urgency=high
 
