--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bubblewrap (0.1.4-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Simon McVittie <smcv@debian.org>  Tue, 29 Nov 2016 10:18:32 +0000
+
 bubblewrap (0.1.3-1) unstable; urgency=medium
 
   * New upstream release
