--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
 bubblewrap (0.1.4-1) UNRELEASED; urgency=medium
 
   * New upstream release
+  * d/p/test-run-be-a-bash-script.patch,
+    d/p/test-run-don-t-assume-we-are-uid-1000.patch,
+    d/p/Adapt-tests-so-they-can-be-run-against-installed-binaries.patch:
+    improve the upstream tests
 
  -- Simon McVittie <smcv@debian.org>  Tue, 29 Nov 2016 10:18:32 +0000
 
