--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-bubblewrap (0.1.4-1) UNRELEASED; urgency=medium
+bubblewrap (0.1.4-1) unstable; urgency=medium
 
   * New upstream release
   * d/p/test-run-be-a-bash-script.patch,
@@ -12,7 +12,7 @@ bubblewrap (0.1.4-1) UNRELEASED; urgency=medium
     to the actual code. Make the executable setuid via Debian packaging
     instead.
 
- -- Simon McVittie <smcv@debian.org>  Tue, 29 Nov 2016 10:18:32 +0000
+ -- Simon McVittie <smcv@debian.org>  Tue, 29 Nov 2016 12:55:31 +0000
 
 bubblewrap (0.1.3-1) unstable; urgency=medium
 
