New upstream release
  - drop all patches, applied upstream
  - debian/copyright: update for build system additions

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+bubblewrap (0.1.5-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+    - drop all patches, applied upstream
+    - debian/copyright: update for build system additions
+
+ -- Simon McVittie <smcv@debian.org>  Tue, 20 Dec 2016 11:21:08 +0000
+
 bubblewrap (0.1.4-2) unstable; urgency=medium
 
   * d/tests/*: only run tests on a real or virtual machine, not in a
