Remove Maintainer status from Laszlo Boszormenyi at his request
Add him to Uploaders instead, and hand the package over to the Utopia
Maintenance Team (the same as OSTree and Flatpak).

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,9 @@ bubblewrap (0.1.5-2) UNRELEASED; urgency=high
     example in Flatpak) from escalating its privileges by injecting
     keypresses into the controlling terminal with the TIOCSTI
     ioctl. (Closes: #850702; CVE-2017-5226)
+  * d/control: remove Maintainer status from Laszlo Boszormenyi at his
+    request. Add him to Uploaders instead, and hand the package over
+    to the Utopia Maintenance Team (the same as OSTree and Flatpak).
 
  -- Simon McVittie <smcv@debian.org>  Mon, 09 Jan 2017 18:01:37 +0000
 
