--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+bubblewrap (0.1.6-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+    - drop the only patch, applied upstream
+
+ -- Simon McVittie <smcv@debian.org>  Sat, 14 Jan 2017 22:00:43 +0000
+
 bubblewrap (0.1.5-2) unstable; urgency=high
 
   * d/p/Call-setsid-before-executing-sandboxed-code-CVE-2017-5226.patch:
