--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,11 @@ bubblewrap (0.1.6-2) UNRELEASED; urgency=medium
       load the necessary seccomp filter to prevent CVE-2017-5226
   * d/p/demos-bubblewrap-shell.sh-Unshare-all-namespaces.patch:
     Add patch from upstream to improve example code
+  * d/p/Call-setsid-and-setexeccon-befor-forking-the-init-monitor.patch,
+    d/p/Install-seccomp-filter-at-the-very-end.patch:
+    Add patches from upstream to re-order initialization. This means
+    the seccomp filter is no longer required to account for syscalls that
+    are made by bwrap itself.
 
  -- Simon McVittie <smcv@debian.org>  Tue, 17 Jan 2017 22:43:51 +0000
 
