--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,10 @@ bubblewrap (0.1.6-2) UNRELEASED; urgency=medium
     Add patches from upstream to re-order initialization. This means
     the seccomp filter is no longer required to account for syscalls that
     are made by bwrap itself.
+  * d/p/Add-unshare-all-and-share-net.patch:
+    Add patch from upstream introducing new command line options
+    --unshare-all and --share-net, for a more whitelist-based approach
+    to sharing namespaces with the parent.
 
  -- Simon McVittie <smcv@debian.org>  Tue, 17 Jan 2017 22:43:51 +0000
 
