--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+bubblewrap (0.1.7-1) unstable; urgency=medium
+
+  * New upstream release
+    - effectively the same as 0.1.6-2
+    - drop all patches
+
+ -- Simon McVittie <smcv@debian.org>  Thu, 19 Jan 2017 14:32:49 +0000
+
 bubblewrap (0.1.6-2) unstable; urgency=medium
 
   * d/p/Make-the-call-to-setsid-optional-with-new-session.patch:
