--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+bubblewrap (0.1.7-2) UNRELEASED; urgency=medium
+
+  * Move to debhelper compat level 10
+    - drop dh-autoreconf, it is now done by default
+    - drop explicit --parallel, it is now the default
+
+ -- Simon McVittie <smcv@debian.org>  Wed, 22 Feb 2017 09:57:13 +0000
+
 bubblewrap (0.1.7-1) unstable; urgency=medium
 
   * New upstream release
