--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+bubblewrap (0.1.8-2) UNRELEASED; urgency=medium
+
+  * Standards-Version: 4.0.0
+    - Use https URL for format of debian/copyright
+
+ -- Simon McVittie <smcv@debian.org>  Wed, 21 Jun 2017 14:14:20 +0100
+
 bubblewrap (0.1.8-1) experimental; urgency=medium
 
   * New upstream release
