--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+bubblewrap (0.1.8-3) UNRELEASED; urgency=medium
+
+  * Use Perl rather than shell script for the autopkgtest test cases.
+    This avoids needing the uncommon bats package, or writing shell
+    scripts.
+
+ -- Simon McVittie <smcv@debian.org>  Tue, 25 Jul 2017 20:24:19 +0100
+
 bubblewrap (0.1.8-2) unstable; urgency=medium
 
   * Standards-Version: 4.0.0
