--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-bubblewrap (0.1.8+dfsg-1) UNRELEASED; urgency=medium
+bubblewrap (0.1.8+dfsg-1) unstable; urgency=medium
 
   * Repack tarball to remove CC-BY-ND cat picture (Closes: #876980)
     - d/copyright: Add Files-Excluded
@@ -7,7 +7,7 @@ bubblewrap (0.1.8+dfsg-1) UNRELEASED; urgency=medium
   * d/watch: Take the opportunity to upgrade to v4 and use @PACKAGE@,
     @ANY_VERSION@, @ARCHIVE_EXT@ tokens
 
- -- Simon McVittie <smcv@debian.org>  Wed, 27 Sep 2017 11:30:32 +0100
+ -- Simon McVittie <smcv@debian.org>  Wed, 27 Sep 2017 11:47:42 +0100
 
 bubblewrap (0.1.8-3) unstable; urgency=medium
 
