--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bubblewrap (0.1.8+dfsg-2) UNRELEASED; urgency=medium
+
+  * d/gbp.conf: Branch for experimental
+
+ -- Simon McVittie <smcv@debian.org>  Fri, 06 Oct 2017 13:25:36 +0100
+
 bubblewrap (0.1.8+dfsg-1) unstable; urgency=medium
 
   * Repack tarball to remove CC-BY-ND cat picture (Closes: #876980)
