--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
-bubblewrap (0.1.8+dfsg-2) UNRELEASED; urgency=medium
+bubblewrap (0.1.8+git26+g6ddebee-2) UNRELEASED; urgency=medium
 
   * d/gbp.conf: Branch for experimental
+  * New upstream snapshot v0.1.8-26-g6ddebee
 
  -- Simon McVittie <smcv@debian.org>  Fri, 06 Oct 2017 13:25:36 +0100
 
