--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ bubblewrap (0.1.8+git26+g6ddebee-2) UNRELEASED; urgency=medium
 
   * d/gbp.conf: Branch for experimental
   * New upstream snapshot v0.1.8-26-g6ddebee
+    - d/patches: Remove
   * d/watch: Adjust to remove +git... suffix
 
  -- Simon McVittie <smcv@debian.org>  Fri, 06 Oct 2017 13:25:36 +0100
