--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bubblewrap (0.1.8+git37+g27eb690-2) UNRELEASED; urgency=medium
+
+  * d/watch: Import release tarballs
+
+ -- Simon McVittie <smcv@debian.org>  Mon, 09 Oct 2017 16:42:37 +0100
+
 bubblewrap (0.1.8+git37+g27eb690-1) experimental; urgency=medium
 
   * d/gbp.conf: Branch for experimental
