--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,13 @@
-bubblewrap (0.1.8+git37+g27eb690-2) UNRELEASED; urgency=medium
+bubblewrap (0.2.0-1) UNRELEASED; urgency=medium
 
+  * New upstream release
   * d/watch: Import release tarballs
   * d/gbp.conf: Merge upstream git tags into the tarball imports
   * d/watch: Stop repacking upstream tarballs
   * d/dist/: Add upstream README.md and demos/ directory, which are
     missing from the official tarball releases
 
- -- Simon McVittie <smcv@debian.org>  Mon, 09 Oct 2017 16:42:37 +0100
+ -- Simon McVittie <smcv@debian.org>  Mon, 09 Oct 2017 17:31:08 +0100
 
 bubblewrap (0.1.8+git37+g27eb690-1) experimental; urgency=medium
 
