Build-depend on automake (>= 1.14.1)
This avoids the aptitude resolver used in backports sometimes deciding
to install automake1.11, which is not enough.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+bubblewrap (0.2.0-2) UNRELEASED; urgency=medium
+
+  * Build-depend on automake (>= 1.14.1) to avoid backports
+    resolvers sometimes deciding to install automake1.11, which is
+    not enough
+
+ -- Simon McVittie <smcv@debian.org>  Fri, 27 Oct 2017 15:56:50 +0100
+
 bubblewrap (0.2.0-1) unstable; urgency=medium
 
   * New upstream release
