--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ bubblewrap (0.2.0-2) UNRELEASED; urgency=medium
   * Build-depend on automake (>= 1.14.1) to avoid backports
     resolvers sometimes deciding to install automake1.11, which is
     not enough
+  * Standards-Version: 4.1.1 (no changes required)
 
  -- Simon McVittie <smcv@debian.org>  Fri, 27 Oct 2017 15:56:50 +0100
 
