--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ bubblewrap (0.2.0-2) UNRELEASED; urgency=medium
     resolvers sometimes deciding to install automake1.11, which is
     not enough
   * Standards-Version: 4.1.1 (no changes required)
+  * Set Rules-Requires-Root: no
 
  -- Simon McVittie <smcv@debian.org>  Fri, 27 Oct 2017 15:56:50 +0100
 
