--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ bubblewrap (0.2.0-2) UNRELEASED; urgency=medium
     not enough
   * Standards-Version: 4.1.1 (no changes required)
   * Set Rules-Requires-Root: no
+  * d/dist/, d/patches/dist/: Add missing files via a patch instead of
+    shipping them in debian/
 
  -- Simon McVittie <smcv@debian.org>  Fri, 27 Oct 2017 15:56:50 +0100
 
