--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-bubblewrap (0.2.0-2) UNRELEASED; urgency=medium
+bubblewrap (0.2.0-2) unstable; urgency=medium
 
   * Build-depend on automake (>= 1.14.1) to avoid backports
     resolvers sometimes deciding to install automake1.11, which is
@@ -9,7 +9,7 @@ bubblewrap (0.2.0-2) UNRELEASED; urgency=medium
     shipping them in debian/
   * Add patches to make demos/userns-block-fd.py work on Debian
 
- -- Simon McVittie <smcv@debian.org>  Fri, 27 Oct 2017 15:56:50 +0100
+ -- Simon McVittie <smcv@debian.org>  Tue, 31 Oct 2017 15:53:05 +0000
 
 bubblewrap (0.2.0-1) unstable; urgency=medium
 
