--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bubblewrap (0.2.0-4) UNRELEASED; urgency=medium
+
+  * Change Vcs-* to point to salsa.debian.org
+
+ -- Simon McVittie <smcv@debian.org>  Mon, 15 Jan 2018 01:17:24 +0000
+
 bubblewrap (0.2.0-3) unstable; urgency=medium
 
   * d/patches/0.2.1/userns-block-fd-*.patch: Update patches to match
