--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ bubblewrap (0.2.0-4) UNRELEASED; urgency=medium
 
   * Change Vcs-* to point to salsa.debian.org
   * Standards-Version: 4.1.3 (no changes required)
+  * d/control, d/tests/control,
+    d/p/debian/Use-Python-3-for-test-demo-code.patch:
+    Use Python 3 for tests and demo code
 
  -- Simon McVittie <smcv@debian.org>  Mon, 15 Jan 2018 01:17:24 +0000
 
