--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-bubblewrap (0.2.0-4) UNRELEASED; urgency=medium
+bubblewrap (0.2.0-4) unstable; urgency=medium
 
   * Change Vcs-* to point to salsa.debian.org
   * Standards-Version: 4.1.3 (no changes required)
@@ -7,7 +7,7 @@ bubblewrap (0.2.0-4) UNRELEASED; urgency=medium
     Use Python 3 for tests and demo code
   * d/control: Annotate python3 dependency with <!nocheck>
 
- -- Simon McVittie <smcv@debian.org>  Mon, 15 Jan 2018 01:17:24 +0000
+ -- Simon McVittie <smcv@debian.org>  Wed, 17 Jan 2018 14:12:50 +0000
 
 bubblewrap (0.2.0-3) unstable; urgency=medium
 
