--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ bubblewrap (0.2.1-1) UNRELEASED; urgency=medium
   * New upstream release
     - Drop all patches except
       d/p/debian/Use-Python-3-for-test-demo-code.patch, merged upstream
+  * Standards-Version: 4.1.4 (no changes required)
 
  -- Simon McVittie <smcv@debian.org>  Sun, 08 Apr 2018 15:37:41 +0100
 
