--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bubblewrap (0.2.1+5+g5991dab-1) UNRELEASED; urgency=medium
+
+  * New upstream git snapshot
+
+ -- Simon McVittie <smcv@debian.org>  Thu, 07 Jun 2018 12:59:07 +0100
+
 bubblewrap (0.2.1-1) unstable; urgency=medium
 
   * New upstream release
