--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bubblewrap (0.3.0-2) UNRELEASED; urgency=medium
+
+  * Standards-Version: 4.2.1 (no changes required)
+
+ -- Simon McVittie <smcv@debian.org>  Tue, 28 Aug 2018 10:58:11 +0100
+
 bubblewrap (0.3.0-1) unstable; urgency=medium
 
   * New upstream release
