--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
-bubblewrap (0.3.0-2) UNRELEASED; urgency=medium
+bubblewrap (0.3.1-1) UNRELEASED; urgency=medium
 
   * Standards-Version: 4.2.1 (no changes required)
+  * New upstream release
 
  -- Simon McVittie <smcv@debian.org>  Tue, 28 Aug 2018 10:58:11 +0100
 
