--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
 bubblewrap (0.3.1-1) UNRELEASED; urgency=medium
 
+  [ Simon McVittie ]
   * Standards-Version: 4.2.1 (no changes required)
   * New upstream release
 
- -- Simon McVittie <smcv@debian.org>  Tue, 28 Aug 2018 10:58:11 +0100
+  [ Iain Lane ]
+  * Don't install setuid on Ubuntu & derivatives
+
+ -- Simon McVittie <smcv@debian.org>  Thu, 27 Sep 2018 19:58:01 +0100
 
 bubblewrap (0.3.0-1) unstable; urgency=medium
 
