--- a/debian/changelog
+++ b/debian/changelog
@@ -5,9 +5,11 @@ bubblewrap (0.3.1-1) UNRELEASED; urgency=medium
   * New upstream release
 
   [ Iain Lane ]
-  * Don't install setuid on Ubuntu & derivatives
+  * Don't install setuid on Ubuntu and derivatives.
+    Ubuntu's kernel enables unprivileged user namespaces, so we don't
+    need to install bwrap setuid there.
 
- -- Simon McVittie <smcv@debian.org>  Thu, 27 Sep 2018 19:58:01 +0100
+ -- Simon McVittie <smcv@debian.org>  Thu, 27 Sep 2018 20:30:29 +0100
 
 bubblewrap (0.3.0-1) unstable; urgency=medium
 
