--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,22 @@
+bubblewrap (0.3.1-2) UNRELEASED; urgency=medium
+
+  [ Iain Lane ]
+  * d/tests/basic: Don't assume `id` will be the same inside the sandbox,
+    making this test pass on (Ubuntu) systems where bubblewrap is not
+    setuid (Closes: #910006)
+
+  [ Simon McVittie ]
+  * d/p/tests-Handle-systems-without-merged-usr.patch:
+    Add patch from upstream git to make tests pass on non-merged-/usr
+    systems where bubblewrap is not setuid. Thanks to Iain Lane.
+  * d/p/man-page-Describe-chdir-not-nonexistent-cwd.patch:
+    Add patch from upstream git to fix documentation of --chdir option
+  * d/p/Make-lockdata-long-enough-on-32-bit-with-64-bit-file-poin.patch:
+    Add patch from upstream git to fix lock handling in tests on 32-bit
+    platforms with 64-bit off_t. Thanks to Timothy E Baldwin.
+
+ -- Simon McVittie <smcv@debian.org>  Wed, 03 Oct 2018 09:29:36 +0100
+
 bubblewrap (0.3.1-1) unstable; urgency=medium
 
   [ Simon McVittie ]
