--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-bubblewrap (0.3.1-2) UNRELEASED; urgency=medium
+bubblewrap (0.3.1-2) unstable; urgency=medium
 
   [ Iain Lane ]
   * d/tests/basic: Don't assume `id` will be the same inside the sandbox,
@@ -17,7 +17,7 @@ bubblewrap (0.3.1-2) UNRELEASED; urgency=medium
     Add patch from upstream git to fix lock handling in tests on 32-bit
     platforms with 64-bit off_t. Thanks to Timothy E Baldwin.
 
- -- Simon McVittie <smcv@debian.org>  Wed, 03 Oct 2018 15:22:59 +0100
+ -- Simon McVittie <smcv@debian.org>  Wed, 03 Oct 2018 15:23:27 +0100
 
 bubblewrap (0.3.1-1) unstable; urgency=medium
 
