--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bubblewrap (0.3.1-3) UNRELEASED; urgency=medium
+
+  * d/upstream/metadata: Add DEP-12 metadata
+
+ -- Simon McVittie <smcv@debian.org>  Fri, 18 Jan 2019 08:48:05 +0000
+
 bubblewrap (0.3.1-2) unstable; urgency=medium
 
   [ Iain Lane ]
