--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-bubblewrap (0.3.1-3) UNRELEASED; urgency=medium
+bubblewrap (0.3.1-3) unstable; urgency=medium
 
   * d/p/Don-t-create-our-own-temporary-mount-point-for-pivot_root.patch:
     Avoid denial of service and potential symlink attacks on systems not
@@ -6,7 +6,7 @@ bubblewrap (0.3.1-3) UNRELEASED; urgency=medium
   * Standards-Version: 4.3.0 (no changes required)
   * d/upstream/metadata: Add DEP-12 metadata
 
- -- Simon McVittie <smcv@debian.org>  Fri, 18 Jan 2019 08:48:05 +0000
+ -- Simon McVittie <smcv@debian.org>  Sat, 02 Mar 2019 13:03:29 +0000
 
 bubblewrap (0.3.1-2) unstable; urgency=medium
 
