--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+bubblewrap (0.3.1-4) unstable; urgency=medium
+
+  * d/p/Don-t-create-our-own-temporary-mount-point-for-pivot_root.patch:
+    Replace with the version that was applied upstream
+  * d/p/tests-Ensure-that-tmpfs-with-oldroot-newroot-doesn-t-appe.patch:
+    Add a test to check that the above patch works as intended
+
+ -- Simon McVittie <smcv@debian.org>  Wed, 06 Mar 2019 14:43:44 +0000
+
 bubblewrap (0.3.1-3) unstable; urgency=medium
 
   * d/p/Don-t-create-our-own-temporary-mount-point-for-pivot_root.patch:
