--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bubblewrap (0.3.3-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Simon McVittie <smcv@debian.org>  Fri, 03 May 2019 18:22:00 +0100
+
 bubblewrap (0.3.1-4) unstable; urgency=medium
 
   * d/p/Don-t-create-our-own-temporary-mount-point-for-pivot_root.patch:
