Drop most patches
All except d/p/debian/Use-Python-3-for-test-demo-code.patch were merged
upstream.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 bubblewrap (0.3.3-1) UNRELEASED; urgency=medium
 
   * New upstream release
+    - Drop all patches except
+      d/p/debian/Use-Python-3-for-test-demo-code.patch, merged upstream
 
  -- Simon McVittie <smcv@debian.org>  Fri, 03 May 2019 18:22:00 +0100
 
