--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bubblewrap (0.3.3-2) UNRELEASED; urgency=medium
+
+  * d/salsa-ci.yml: Request standard CI on salsa.debian.org
+
+ -- Simon McVittie <smcv@debian.org>  Sun, 23 Jun 2019 19:21:29 +0100
+
 bubblewrap (0.3.3-1) experimental; urgency=medium
 
   * New upstream release
