--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-bubblewrap (0.3.3-2) UNRELEASED; urgency=medium
+bubblewrap (0.3.3-2) unstable; urgency=medium
 
+  * Release to unstable
   * d/salsa-ci.yml: Request standard CI on salsa.debian.org
   * d/rules: Disable any active LD_PRELOAD hacks while running tests.
     These will typically assume a fully-featured OS (for example faketime
@@ -8,7 +9,7 @@ bubblewrap (0.3.3-2) UNRELEASED; urgency=medium
     functional (for example /dev/shm isn't always mounted).
   * Standards-Version: 4.4.0 (no changes required)
 
- -- Simon McVittie <smcv@debian.org>  Sun, 23 Jun 2019 19:21:29 +0100
+ -- Simon McVittie <smcv@debian.org>  Tue, 09 Jul 2019 09:34:53 +0100
 
 bubblewrap (0.3.3-1) experimental; urgency=medium
 
