--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-bubblewrap (0.3.3-3) UNRELEASED; urgency=medium
+bubblewrap (0.4.0-1) UNRELEASED; urgency=medium
 
+  * New upstream release
   * Use debhelper-compat 12
   * Standards-Version: 4.4.1 (no changes required)
 
