--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-bubblewrap (0.4.0-1) UNRELEASED; urgency=medium
+bubblewrap (0.4.0-1) unstable; urgency=medium
 
   * New upstream release
   * Use debhelper-compat 12
   * Standards-Version: 4.4.1 (no changes required)
 
- -- Simon McVittie <smcv@debian.org>  Thu, 29 Aug 2019 08:56:30 +0100
+ -- Simon McVittie <smcv@debian.org>  Thu, 28 Nov 2019 11:14:41 +0000
 
 bubblewrap (0.3.3-2) unstable; urgency=medium
 
