--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ bubblewrap (0.4.0-2) UNRELEASED; urgency=medium
 
   * Update various URLs from https://github.com/projectatomic/bubblewrap
     to https://github.com/containers/bubblewrap
+  * Set upstream metadata fields: Repository.
 
  -- Simon McVittie <smcv@debian.org>  Thu, 02 Jan 2020 18:55:48 +0000
 
