--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ bubblewrap (0.4.0-2) UNRELEASED; urgency=medium
   * Update various URLs from https://github.com/projectatomic/bubblewrap
     to https://github.com/containers/bubblewrap
   * Set upstream metadata fields: Repository.
+  * Remove obsolete field Name from debian/upstream/metadata (already
+    present in machine-readable debian/copyright).
 
  -- Simon McVittie <smcv@debian.org>  Thu, 02 Jan 2020 18:55:48 +0000
 
