--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ bubblewrap (0.4.0-2) UNRELEASED; urgency=medium
   * Set upstream metadata fields: Repository.
   * Remove obsolete field Name from debian/upstream/metadata (already
     present in machine-readable debian/copyright).
+  * Standards-Version: 4.5.0 (no changes required)
 
  -- Simon McVittie <smcv@debian.org>  Thu, 02 Jan 2020 18:55:48 +0000
 
