--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+bubblewrap (0.4.1-2) UNRELEASED; urgency=medium
+
+  * d/gbp.conf: Rename development branch to debian/latest
+  * Standards-Version: 4.5.1 (no changes required)
+
+ -- Simon McVittie <smcv@debian.org>  Fri, 01 Jan 2021 14:02:42 +0000
+
 bubblewrap (0.4.1-1) unstable; urgency=high
 
   * New upstream release
