--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,14 @@ bubblewrap (0.4.1-2) UNRELEASED; urgency=medium
   * d/gbp.conf: Rename development branch to debian/latest
   * Standards-Version: 4.5.1 (no changes required)
   * Reference CVE-2020-5291 in previous changelog entry
+  * Add some bugfix patches from upstream
+    - Correct the name of PR_SET_NO_NEW_PRIVS in an error message
+    - Silence warnings from the kernel when a non-Y2038-compliant
+      filesystem such as xfs is remounted into the sandbox
+    - Don't fail if /proc is read-only, as it can be inside Docker
+  * Forward python3 patch upstream
 
- -- Simon McVittie <smcv@debian.org>  Fri, 01 Jan 2021 14:02:42 +0000
+ -- Simon McVittie <smcv@debian.org>  Fri, 01 Jan 2021 14:19:00 +0000
 
 bubblewrap (0.4.1-1) unstable; urgency=high
 
