--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+bubblewrap (0.4.1+git20210610-1) UNRELEASED; urgency=medium
+
+  * Branch for experimental
+  * New upstream git snapshot
+    - When creating mount points for files, create them read-only
+    - Allow mounting a non-directory over any existing non-directory,
+      non-symlink, in particular mounting a socket over a socket
+    - Add zsh completion
+    - Drop most patches, applied upstream
+
+ -- Simon McVittie <smcv@debian.org>  Fri, 11 Jun 2021 10:25:59 +0100
+
 bubblewrap (0.4.1-3) unstable; urgency=medium
 
   * Stop making /usr/bin/bwrap setuid root.
